--- a/writeup/latex/frontmatter/abbreviations.tex
+++ b/writeup/latex/frontmatter/abbreviations.tex
@@ -15,6 +15,7 @@
 \item[RDF]			Resource Description Framework
 \item[RG]			Response Generation
 \item[RNN]			Recurrent Neural Network
+\item[SMART]		Specific, Measurable, Achievable, Realistic and Time-bound
 \item[SPARQL]		SPARQL Protocol and RDF Query Language
 \item[UDC]			Ubuntu Dialogue Corpus
 \item[XML]			Extensible Markup Language
