--- a/writeup/latex/frontmatter/acknowledgements.tex
+++ b/writeup/latex/frontmatter/acknowledgements.tex
@@ -1,2 +1,4 @@
 \chapter*{Acknowledgements}
-Acknowledgements
+I want to take this opportunity to thank my family and my partner, for their continued support not only during this project, but throughout my whole higher education journey. ----
+
+I also want to thank my project supervisor, Steve Wesemeyer, for his continued support throughout this project. His guidance and feedback has been invaluable.
