--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -907,3 +907,31 @@
 	year={2002},
 	publisher={Addison-Wesley Professional}
 }
+
+@article{smart,
+	title={There’s a SMART way to write management’s goals and objectives},
+	author={Doran, George T},
+	journal={Management review},
+	volume={70},
+	number={11},
+	pages={35--36},
+	year={1981}
+}
+
+@ARTICLE{boehm,
+	author={B. W. {Boehm}},
+	journal={Computer}, 
+	title={A spiral model of software development and enhancement}, 
+	year={1988},
+	volume={21},
+	number={5},
+	pages={61-72},}
+
+@incollection{bizer2011linked,
+	title={Linked data: The story so far},
+	author={Bizer, Christian and Heath, Tom and Berners-Lee, Tim},
+	booktitle={Semantic services, interoperability and web applications: emerging concepts},
+	pages={205--227},
+	year={2011},
+	publisher={IGI Global}
+}
