--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -935,3 +935,18 @@
 	year={2011},
 	publisher={IGI Global}
 }
+
+@inproceedings{mendes2011dbpedia,
+	title={DBpedia spotlight: shedding light on the web of documents},
+	author={Mendes, Pablo N and Jakob, Max and Garc{\'\i}a-Silva, Andr{\'e}s and Bizer, Christian},
+	booktitle={Proceedings of the 7th international conference on semantic systems},
+	pages={1--8},
+	year={2011}
+}
+
+@inproceedings{linkedmdb,
+	title={Linked Movie Data Base.},
+	author={Hassanzadeh, Oktie and Consens, Mariano P},
+	booktitle={LDOW},
+	year={2009}
+}
