--- a/writeup/latex/dissertation.tex
+++ b/writeup/latex/dissertation.tex
@@ -53,7 +53,7 @@
 \begin{document} 
 
 	%title
-	\title{How Linked Data Can Be Used to \\ Develop a Chatbot for Answering Wikipedia Queries}
+	\title{Developing a Chatbot to Answer Wikipedia Queries \\ Using Linked Open Data}
 	% front matter
 	\author{Alex Turner}
 	\urn{6436302}
