--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -833,7 +833,7 @@
  	title={Google Code Archive - Long-term storage for Google Code Project Hosting.},
  	url={https://code.google.com/archive/p/program-ab/},
  	journal={Google}, publisher={Google},
- 	author={{ALICE A.I. Foundation}}, year={2013}, month={Jan}}
+ 	author={{ALICE A.I. Foundation}}, year={2013}, month={Jan}, note = "Accessed 1 April 2020" }
  
  @misc{lumenrobot2016,
  	author = {Irawan, Hendy},
@@ -949,4 +949,28 @@
 	author={Hassanzadeh, Oktie and Consens, Mariano P},
 	booktitle={LDOW},
 	year={2009}
+}
+
+@misc{acm,
+	title={ACM Code of Ethics and Professional Conduct},
+	url={https://www.acm.org/code-of-ethics},
+	author={{Association for Computer Machinery}},
+	year={2018},
+	addendum = "Accessed 1 April 2020"
+}
+
+@misc{cma,
+	title={Computer Misuse Act 1990 c. 18},
+	url={http://www.legislation.gov.uk/ukpga/1990/18/contents},
+	author={{UK Public General Acts}},
+	year={1990},
+	addendum = "Accessed 1 April 2020"
+}
+
+@misc{dpa,
+	title={Data Protection Act 2018 c. 12},
+	url={http://www.legislation.gov.uk/ukpga/2018/12/contents/enacted},
+	author={{UK Public General Acts}},
+	year={2018},
+	addendum = "Accessed 1 April 2020"
 }
