updated writeup and readme

--- a/writeup/latex/frontmatter/abbreviations.tex
+++ b/writeup/latex/frontmatter/abbreviations.tex
@@ -4,6 +4,7 @@
 \item[A.L.I.C.E]	Artificial Linguistic Internet Computer Entity
 \item[AST]			Abstract Syntax Tree
 \item[CAD]			Computer-Aided Diagnosis
+\item[CSV]			Comma-separated values
 \item[GO]			Goal-Oriented
 \item[HCI]			Human-Computer Interaction
 \item[IoT]			Internet of Things
@@ -15,6 +16,7 @@
 \item[RDF]			Resource Description Framework
 \item[RG]			Response Generation
 \item[RNN]			Recurrent Neural Network
+\item[SaaS]			Software as a Service
 \item[SMART]		Specific, Measurable, Achievable, Realistic and Time-bound
 \item[SPARQL]		SPARQL Protocol and RDF Query Language
 \item[UDC]			Ubuntu Dialogue Corpus
