--- a/writeup/latex/references.bib
+++ b/writeup/latex/references.bib
@@ -956,7 +956,7 @@
 	url={https://www.acm.org/code-of-ethics},
 	author={{Association for Computer Machinery}},
 	year={2018},
-	addendum = "Accessed 1 April 2020"
+	note = "Accessed 1 April 2020"
 }
 
 @misc{cma,
@@ -964,7 +964,7 @@
 	url={http://www.legislation.gov.uk/ukpga/1990/18/contents},
 	author={{UK Public General Acts}},
 	year={1990},
-	addendum = "Accessed 1 April 2020"
+	note = "Accessed 1 April 2020"
 }
 
 @misc{dpa,
@@ -972,5 +972,5 @@
 	url={http://www.legislation.gov.uk/ukpga/2018/12/contents/enacted},
 	author={{UK Public General Acts}},
 	year={2018},
-	addendum = "Accessed 1 April 2020"
+	note = "Accessed 1 April 2020"
 }
